# discord-archived

./: .env.example  .gitignore  .pylintrc  Cargo.toml  Pipfile  README.md  example.env  generate_database.py  main.py  package.json  requirements.txt
cogs/commands/: devApply.py  dev_apply.py
cogs/events/: CommandEvents.py  command_event.py  join_event.py  reaction_event.py
commands/: devApply.py
modules/: config.py  database.py  permissions.py
src/: index.js  main.rs
src/api/: addRole.js  removeRole.js  role.js
src/commands/: index.js
src/commands/help/: index.js
src/commands/tester/: accept.js  apply.js
src/middleware/: checkToken.js
