[package]
name = "sneakybot"
version = "0.1.0"
authors = ["SerekKiri <kacper.potyrala@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.9.0-rc.0", default-features = false, features = ["builder", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend"] }
tokio = "0.2.22"
dotenv = "0.15.0"
